# arm_stack

./: .gitignore  README.md  SETUP.md  THIRD_PARTY_NOTICES.md  setup.sh
docs/RCA_Reports/: wrist_camera_perception_rca.md
src/arm_bringup/: CMakeLists.txt  README.md  package.xml
src/arm_bringup/config/: controllers.yaml  pick_place_initial_positions.yaml
src/arm_bringup/launch/: bringup.launch.py  pick_and_place_bringup.launch.py  sim_control.launch.py  sim_moveit.launch.py
src/arm_bringup/scripts/: spawn_objects.py
src/arm_bringup/worlds/: table_pick.world  table_pick_ign.sdf
src/arm_description/: CMakeLists.txt  README.md  package.xml
src/arm_description/config/: visual_parameters.yaml
src/arm_description/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro
src/arm_interfaces/: CMakeLists.txt  README.md  package.xml
src/arm_interfaces/srv/: DetectObjects.srv
src/arm_manipulation/: CMakeLists.txt  README.md  package.xml
src/arm_manipulation/src/: goto_named.cpp  goto_pose.cpp  pick_place_dynamic.cpp  pick_place_static.cpp  scene_demo.cpp  trace_cartesian_path.cpp  tune_pick_place.cpp
src/arm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/arm_moveit_config/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml
src/arm_moveit_config/launch/: moveit.launch.py
src/arm_moveit_config/rviz/: view_robot.rviz
src/arm_moveit_config/srdf/: arm.srdf.xacro  arm_macro.srdf.xacro
src/arm_mtc/: CMakeLists.txt  README.md  package.xml
src/arm_mtc/src/: pick_place_mtc.cpp
src/arm_perception/: CMakeLists.txt  README.md  package.xml
src/arm_perception/config/: detector_params.yaml
src/arm_perception/launch/: perception.launch.py
src/arm_perception/src/: object_detector.cpp
src/robotiq_description/: CMakeLists.txt  package.xml
src/robotiq_description/urdf/: robotiq_2f_85_macro.urdf.xacro
